# AoC_2022

./: .bazelrc  .gitignore  AoC_2022.sln  BAZEL_BUILD.md  BAZEL_CONVERSION_NOTES.md  BAZEL_STATUS.md  BUILD.bazel  BUILD_NINJA.md  CMakeLists.txt  MODULE.bazel  README.md  README_BAZEL.md  TODOs.txt  build.sh  configure.sh
AoC/: AoC.vcxproj  AoC.vcxproj.filters  BUILD.bazel  CMakeLists.txt  fsHelpers.ixx  result.cpp  result.ixx  testData.cpp  testData.ixx
day01/: BUILD.bazel  CMakeLists.txt  data.ixx  day01.vcxproj  day01.vcxproj.filters  main.cpp  result.ixx
day02/: BUILD.bazel  CMakeLists.txt  data.ixx  day02.vcxproj  day02.vcxproj.filters  main.cpp  result.cpp  result.ixx
day03/: BUILD.bazel  CMakeLists.txt  day03.vcxproj  day03.vcxproj.filters  main.cpp  readme_setup.txt  result.cpp  result.ixx
day04/: BUILD.bazel  CMakeLists.txt  day04.vcxproj  day04.vcxproj.filters  main.cpp  result.cpp  result.ixx
day05/: BUILD.bazel  CMakeLists.txt  day05.vcxproj  day05.vcxproj.filters  main.cpp  result.cpp  result.ixx
day06/: BUILD.bazel  CMakeLists.txt  day06.vcxproj  day06.vcxproj.filters  main.cpp  result.cpp  result.ixx
day07/: BUILD.bazel  CMakeLists.txt  day07.vcxproj  day07.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day08/: BUILD.bazel  CMakeLists.txt  day08.vcxproj  day08.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx
day09/: BUILD.bazel  CMakeLists.txt  day09.vcxproj  day09.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day10/: BUILD.bazel  CMakeLists.txt  day10.vcxproj  day10.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day11/: BUILD.bazel  CMakeLists.txt  day11.vcxproj  day11.vcxproj.filters  main.cpp  monkey.cpp  monkeyOperations.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day12/: BUILD.bazel  CMakeLists.txt  day12.vcxproj  day12.vcxproj.filters  helpers.cpp  main.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day13/: BUILD.bazel  CMakeLists.txt  day13.vcxproj  day13.vcxproj.filters  extractor.cpp  extractor.ixx  item.cpp  item.ixx  main.cpp  packet.cpp  packet.ixx  packetCompare.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day14/: BUILD.bazel  CMakeLists.txt  day14.vcxproj  day14.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx  scan.cpp  scan.ixx  scanAnalyze.cpp  scanPrepare.cpp  shared.cpp
day15/: BUILD.bazel  CMakeLists.txt  day15.vcxproj  day15.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  point.ixx  range.ixx  result.ixx  sensorInfo.ixx  shared.cpp
day16/: BUILD.bazel  CMakeLists.txt  day16.vcxproj  day16.vcxproj.filters  main.cpp  minDistances.ixx  part1.cpp  part2.cpp  result.ixx  resultCompute.cpp  resultPrepare.cpp  valveInfo.ixx
day17/: BUILD.bazel  CMakeLists.txt  day17.vcxproj  day17.vcxproj.filters  jetPattern.cpp  jetPattern.ixx  main.cpp  part1.cpp  part2.cpp  result.ixx  rock.cpp  rock.ixx  rockShape.cpp  rockShape.ixx  rocksTower.cpp  rocksTower.ixx  shared.cpp
day18/: BUILD.bazel  CMakeLists.txt  cube.cpp  cube.ixx  day18.vcxproj  day18.vcxproj.filters  grid.cpp  grid.ixx  main.cpp  part1.cpp  part2.cpp  result.ixx  shared.cpp
day19/: BUILD.bazel  CMakeLists.txt  blockedRobots.ixx  blueprint.cpp  blueprint.ixx  day19.vcxproj  day19.vcxproj.filters  main.cpp  part1.cpp  part2.cpp  result.ixx  robotCost.cpp  robotCost.ixx  shared.cpp  solver.cpp  state.cpp  state.ixx  types.ixx
day20/: BUILD.bazel  CMakeLists.txt  day20.vcxproj  day20.vcxproj.filters  gps.ixx  main.cpp  result.ixx  solver.ixx  tests.ixx  types.ixx
day21/: BUILD.bazel  CMakeLists.txt  day21.vcxproj  day21.vcxproj.filters  main.cpp  monkey_math.ixx  result.ixx  solver.ixx  tests.ixx  types.ixx
day22/: BUILD.bazel  CMakeLists.txt  day22.vcxproj  day22.vcxproj.filters  main.cpp  monkey_map.ixx  result.ixx  solver.ixx  tests.ixx  types.ixx
day23/: BUILD.bazel  day23.vcxproj
day24/: BUILD.bazel  day24.vcxproj
day25/: BUILD.bazel  day25.vcxproj
runner/: data.ixx  input.ixx  result.cpp  result.ixx  runner.vcxproj  runner.vcxproj.filters
template/: BUILD.bazel  CMakeLists.txt  aoc_template.ixx  data.ixx  input.txt  input_private.txt  main.cpp  part1.cpp  part2.cpp  readme_setup.txt  result.cpp  result.ixx  sample_input_b.txt  shared.cpp  solver.ixx  template.vcxproj  template.vcxproj.filters  tests.ixx  types.ixx
