"""Advent of Code 2022 Solutions - Root Build File"""

# Convenience target to build all implemented day solutions
filegroup(
    name = "all_days",
    srcs = [
        "//day01:day01",
        "//day02:day02",
        "//day03:day03",
        "//day04:day04",
        "//day05:day05",
        "//day06:day06",
        "//day07:day07",
        "//day08:day08",
        "//day09:day09",
        "//day10:day10",
        "//day11:day11",
        "//day12:day12",
        "//day13:day13",
        "//day14:day14",
        "//day15:day15",
        "//day16:day16",
        "//day17:day17",
        "//day18:day18",
        "//day19:day19",
        "//day20:day20",
        "//day21:day21",
        "//day22:day22",
        # day23, day24, day25 not yet implemented
    ],
)
