"""AoC 2022 C++ Solutions with Bazel"""

module(
    name = "aoc_2022",
    version = "1.0.0",
)

# Bazel Central Registry dependencies
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "gtest")

# Note: Boost can be added via system libraries or custom repository rule
# For now, system Boost installation is assumed
