"""Day 25: Full of Hot Air"""

# Note: Day 25 not yet implemented
# Uncomment when source files are added

# load("@rules_cc//cc:defs.bzl", "cc_binary")
# 
# cc_binary(
#     name = "day25",
#     srcs = glob(["*.cpp", "*.ixx"]),
#     copts = ["-std=c++20"],
#     data = glob(["*.txt"], allow_empty = True),
#     deps = ["//AoC:aoc_lib"],
# )
